# meta-magic_mount-rs

./: Cargo.toml  LICENSE_HEADER  build.rs  cliff.toml  clippy.toml  licenserc.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/bot/: bot.py  pyproject.toml
.github/bot/bot/: __init__.py  __main__.py  config.py  gh_helpers.py  github.py  history.py  msg_gen.py  parsing.py  telegram.py  util.py
.github/workflows/: ci.yml  license_header.yml  lints.yml  release.yml
module/: config.toml  config_apatch.toml  customize.sh  metainstall.sh  metamount.sh  metauninstall.sh  uninstall.sh
src/: bind_mount.rs  config.rs  defs.rs  errors.rs  main.rs  misc.rs  parser.rs  scanner.rs
src/magic_mount/: mod.rs  node.rs  utils.rs
src/parser/: mod.rs  mount.rs
src/utils/: ksucalls.rs  mod.rs
webui/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  vite.config.ts
webui/src/: App.tsx  app.css  global.d.ts  init.ts  layout.css  main.tsx  material-web.d.ts  style.css  types.ts
webui/src/components/: BottomActions.tsx  ChipInput.css  ChipInput.tsx  IgnoredCard.vue  MagicLogo.css  MagicLogo.tsx  NavBar.css  NavBar.tsx  Skeleton.css  Skeleton.tsx  StatusCard.vue  Toast.css  Toast.tsx  TopBar.css  TopBar.tsx
webui/src/lib/: api.mock.ts  api.ts  constants.ts  i18n.ts
webui/src/lib/stores/: configStore.ts  moduleStore.ts  sysStore.ts  uiStore.ts
webui/src/locales/: en.json  ja.json  ru.json  ua.json  zh-hant.json  zh.json
webui/src/page/: about.vue  config.vue  modules.vue  status.vue
webui/src/routes/: ConfigTab.css  ConfigTab.tsx  InfoTab.css  InfoTab.tsx  ModulesTab.css  ModulesTab.tsx  StatusTab.css  StatusTab.tsx
xtask/: Cargo.toml
xtask/src/: main.rs  zip_ext.rs
