# Copyright (C) 2026 meta-magic_mount-rs developers
# SPDX-License-Identifier: Apache-2.0

cargo-features = ["codegen-backend"]

[workspace]
members = ["xtask"]

[package]
name = "magic_mount_rs"
version = "4.0.3"
edition = "2024"
description = "An implementation of a metamodule using Magic Mount, Based on MKSU, Template is from meta-overlay."
authors = ["mmrs developers"]
license = "Apache-2.0"
readme = "docs/README.md"
repository = "https://github.com/Tools-cx-app/meta-magic_mount-rs/"

[package.metadata.magic_mount_rs]
name = "Magic Mount-rs"
update = "https://github.com/Tools-cx-app/meta-magic_mount-rs/raw/master/update/update.json"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"

[dependencies]
anyhow.workspace = true
extattr = "1"
log = "0.4"
rustix = { version = "1.1", features = ["fs", "mount"] }
libc = "0.2"
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
regex-lite = "0.1.9"
fastrand = "2.4.1"
tempfile = "3.27.0"
java-properties = "2.0.0"
encoding_rs = "0.8.35"
glob = "0.3.3"
thiserror = "2.0.18"
rustc-hash = "2.1.2"
const_format = "0.2.36"

[build-dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true

[profile.dev]
codegen-backend = "cranelift"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
ksu = { git = "https://github.com/Tools-cx-app/ksu.git", version = "0.2.0" }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.10"
