# Copyright (C) 2026 Tools-cx-app <localhost.hutao@gmail.com>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
fs_extra = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
toml = "1.1.2"
zip = "8.6.0"
